--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,8 +71,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0'
     kapt "androidx.room:room-compiler:$room_version"
 
-
-    implementation "com.google.code.gson:gson:2.8.6"
+//    implementation "com.google.code.gson:gson:2.8.6"
 
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1'
@@ -80,7 +79,7 @@ dependencies {
 
     def retrofit_version = '2.9.0'
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
-    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
 
     def lifecycle_version = '2.0.0'
